--- a/index.html
+++ b/index.html
@@ -399,8 +399,8 @@
     <section class="hero" id="home">
         <div class="container">
             <div class="hero-content">
-                <h1>Your Name</h1>
-                <p>Full Stack Developer & Creative Technologist</p>
+                <h1>Jeremy Cabrera Rodriguez</h1>
+                <p>Python Developer & Software Engineer</p>
                 <a href="#projects" class="cta-button">View My Work</a>
             </div>
         </div>
@@ -410,7 +410,7 @@
         <div class="container">
             <h2 class="section-title">About Me</h2>
             <div class="about-content">
-                <p>I'm a passionate developer who loves creating innovative solutions and beautiful user experiences. With expertise in modern web technologies, I build applications that not only function flawlessly but also inspire and delight users.</p>
+                <p>I'm a passionate Python developer who loves creating innovative solutions and robust applications. With expertise in Python frameworks and modern development practices, I build scalable software that solves real-world problems efficiently and elegantly.</p>
             </div>
         </div>
     </section>
@@ -421,86 +421,18 @@
             <div class="projects-grid">
                 <div class="project-card">
                     <div class="project-header">
-                        <div class="project-icon">🚀</div>
+                        <div class="project-icon">⚡</div>
                         <div>
-                            <h3>E-Commerce Platform</h3>
+                            <h3>FastAPI Web Service</h3>
                             <span class="project-status">Coming Soon</span>
                         </div>
                     </div>
-                    <p class="project-description">A modern e-commerce solution with real-time inventory management, secure payments, and an intuitive admin dashboard.</p>
+                    <p class="project-description">A high-performance REST API built with FastAPI, featuring automatic documentation, authentication, and database integration.</p>
                     <div class="project-tech">
-                        <span class="tech-tag">React</span>
-                        <span class="tech-tag">Node.js</span>
-                        <span class="tech-tag">MongoDB</span>
-                        <span class="tech-tag">Stripe</span>
-                    </div>
-                </div>
-
-                <div class="project-card">
-                    <div class="project-header">
-                        <div class="project-icon">🎨</div>
-                        <div>
-                            <h3>Design System</h3>
-                            <span class="project-status">In Progress</span>
-                        </div>
-                    </div>
-                    <p class="project-description">A comprehensive design system with reusable components, tokens, and guidelines for consistent user experiences.</p>
-                    <div class="project-tech">
-                        <span class="tech-tag">Figma</span>
-                        <span class="tech-tag">Storybook</span>
-                        <span class="tech-tag">CSS</span>
-                        <span class="tech-tag">TypeScript</span>
-                    </div>
-                </div>
-
-                <div class="project-card">
-                    <div class="project-header">
-                        <div class="project-icon">📱</div>
-                        <div>
-                            <h3>Mobile App</h3>
-                            <span class="project-status">Planning</span>
-                        </div>
-                    </div>
-                    <p class="project-description">A cross-platform mobile application focusing on productivity and seamless user experience across devices.</p>
-                    <div class="project-tech">
-                        <span class="tech-tag">React Native</span>
-                        <span class="tech-tag">Firebase</span>
-                        <span class="tech-tag">Redux</span>
-                        <span class="tech-tag">TypeScript</span>
-                    </div>
-                </div>
-
-                <div class="project-card">
-                    <div class="project-header">
-                        <div class="project-icon">🤖</div>
-                        <div>
-                            <h3>AI Dashboard</h3>
-                            <span class="project-status">Concept</span>
-                        </div>
-                    </div>
-                    <p class="project-description">An intelligent dashboard that provides insights and analytics powered by machine learning algorithms.</p>
-                    <div class="project-tech">
-                        <span class="tech-tag">Python</span>
-                        <span class="tech-tag">TensorFlow</span>
-                        <span class="tech-tag">Vue.js</span>
-                        <span class="tech-tag">D3.js</span>
-                    </div>
-                </div>
-
-                <div class="project-card">
-                    <div class="project-header">
-                        <div class="project-icon">🌐</div>
-                        <div>
-                            <h3>Web3 Platform</h3>
-                            <span class="project-status">Research</span>
-                        </div>
-                    </div>
-                    <p class="project-description">A decentralized platform exploring blockchain technology and smart contract integration.</p>
-                    <div class="project-tech">
-                        <span class="tech-tag">Solidity</span>
-                        <span class="tech-tag">Web3.js</span>
-                        <span class="tech-tag">Next.js</span>
-                        <span class="tech-tag">Ethereum</span>
+                        <span class="tech-tag">FastAPI</span>
+                        <span class="tech-tag">PostgreSQL</span>
+                        <span class="tech-tag">SQLAlchemy</span>
+                        <span class="tech-tag">JWT</span>
                     </div>
                 </div>
 
@@ -508,16 +440,84 @@
                     <div class="project-header">
                         <div class="project-icon">📊</div>
                         <div>
-                            <h3>Data Visualization</h3>
+                            <h3>Data Analysis Dashboard</h3>
+                            <span class="project-status">In Progress</span>
+                        </div>
+                    </div>
+                    <p class="project-description">Interactive dashboard for data visualization and analysis using modern Python libraries and frameworks.</p>
+                    <div class="project-tech">
+                        <span class="tech-tag">Streamlit</span>
+                        <span class="tech-tag">Pandas</span>
+                        <span class="tech-tag">Plotly</span>
+                        <span class="tech-tag">NumPy</span>
+                    </div>
+                </div>
+
+                <div class="project-card">
+                    <div class="project-header">
+                        <div class="project-icon">🤖</div>
+                        <div>
+                            <h3>Machine Learning Pipeline</h3>
+                            <span class="project-status">Planning</span>
+                        </div>
+                    </div>
+                    <p class="project-description">End-to-end ML pipeline for data preprocessing, model training, and automated deployment with monitoring.</p>
+                    <div class="project-tech">
+                        <span class="tech-tag">Scikit-learn</span>
+                        <span class="tech-tag">TensorFlow</span>
+                        <span class="tech-tag">MLflow</span>
+                        <span class="tech-tag">Docker</span>
+                    </div>
+                </div>
+
+                <div class="project-card">
+                    <div class="project-header">
+                        <div class="project-icon">🐍</div>
+                        <div>
+                            <h3>Django Web Application</h3>
+                            <span class="project-status">Concept</span>
+                        </div>
+                    </div>
+                    <p class="project-description">Full-stack web application built with Django, featuring user authentication, admin panel, and responsive design.</p>
+                    <div class="project-tech">
+                        <span class="tech-tag">Django</span>
+                        <span class="tech-tag">PostgreSQL</span>
+                        <span class="tech-tag">Redis</span>
+                        <span class="tech-tag">Celery</span>
+                    </div>
+                </div>
+
+                <div class="project-card">
+                    <div class="project-header">
+                        <div class="project-icon">🔧</div>
+                        <div>
+                            <h3>Automation Scripts</h3>
+                            <span class="project-status">Research</span>
+                        </div>
+                    </div>
+                    <p class="project-description">Collection of Python automation scripts for workflow optimization, file processing, and system administration.</p>
+                    <div class="project-tech">
+                        <span class="tech-tag">Python</span>
+                        <span class="tech-tag">Selenium</span>
+                        <span class="tech-tag">BeautifulSoup</span>
+                        <span class="tech-tag">Requests</span>
+                    </div>
+                </div>
+
+                <div class="project-card">
+                    <div class="project-header">
+                        <div class="project-icon">📦</div>
+                        <div>
+                            <h3>Python Package</h3>
                             <span class="project-status">Ideation</span>
                         </div>
                     </div>
-                    <p class="project-description">Interactive data visualization tools that transform complex datasets into beautiful, understandable insights.</p>
+                    <p class="project-description">Open-source Python package with comprehensive testing, documentation, and CI/CD pipeline for distribution.</p>
                     <div class="project-tech">
-                        <span class="tech-tag">D3.js</span>
-                        <span class="tech-tag">Three.js</span>
-                        <span class="tech-tag">WebGL</span>
-                        <span class="tech-tag">Canvas</span>
+                        <span class="tech-tag">Poetry</span>
+                        <span class="tech-tag">Pytest</span>
+                        <span class="tech-tag">GitHub Actions</span>
+                        <span class="tech-tag">PyPI</span>
                     </div>
                 </div>
             </div>
