--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@
                         <span>📧</span>
                         <span>Email</span>
                     </a>
-                    <a href="https://linkedin.com/in/yourprofile" class="contact-link">
+                    <a href="https://www.linkedin.com/in/jeremy-cabrera-rodriguez-963247178/" class="contact-link">
                         <span>💼</span>
                         <span>LinkedIn</span>
                     </a>
