--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@
             <div class="contact-content">
                 <p>I'm always interested in new opportunities and collaborations. Let's build something amazing together!</p>
                 <div class="contact-links">
-                    <a href="mailto:your.email@example.com" class="contact-link">
+                    <a href="mailto:jeremycabrerarodriguez@gmail.com" class="contact-link">
                         <span>📧</span>
                         <span>Email</span>
                     </a>
@@ -538,7 +538,7 @@
                         <span>💼</span>
                         <span>LinkedIn</span>
                     </a>
-                    <a href="https://github.com/yourusername" class="contact-link">
+                    <a href="https://github.com/jeremycabrera1" class="contact-link">
                         <span>💻</span>
                         <span>GitHub</span>
                     </a>
