Update project card for Muay Thai Gym App

--- a/index.html
+++ b/index.html
@@ -415,26 +415,23 @@
         </div>
     </section>
 
-    <section class="projects fade-in" id="projects">
-        <div class="container">
-            <h2 class="section-title">Featured Projects</h2>
-            <div class="projects-grid">
-                <div class="project-card">
+    <div class="project-card">
                     <div class="project-header">
-                        <div class="project-icon">⚡</div>
+                        <div class="project-icon">🥊</div>
                         <div>
-                            <h3>FastAPI Web Service</h3>
-                            <span class="project-status">Coming Soon</span>
+                            <h3>Muay Thai Gym App</h3>
+                            <span class="project-status" style="background: rgba(0, 212, 255, 0.2); color: #00d4ff;">Live</span>
                         </div>
                     </div>
-                    <p class="project-description">A high-performance REST API built with FastAPI, featuring automatic documentation, authentication, and database integration.</p>
+                    <p class="project-description">Full-featured web application for a Muay Thai gym, managing classes, schedules, member information, and gym operations.</p>
                     <div class="project-tech">
-                        <span class="tech-tag">FastAPI</span>
+                        <span class="tech-tag">Django</span>
+                        <span class="tech-tag">Python</span>
                         <span class="tech-tag">PostgreSQL</span>
-                        <span class="tech-tag">SQLAlchemy</span>
-                        <span class="tech-tag">JWT</span>
+                        <span class="tech-tag">HTML/CSS</span>
                     </div>
-                </div>
+                    <a href="https://muaythaiapp-hjiy.onrender.com" target="_blank" style="display: inline-block; margin-top: 15px; padding: 8px 20px; background: rgba(0, 212, 255, 0.1); color: #00d4ff; text-decoration: none; border-radius: 20px; border: 1px solid rgba(0, 212, 255, 0.3); transition: all 0.3s ease;">View Live App →</a>
+    </div>
 
                 <div class="project-card">
                     <div class="project-header">
