Add Blog App project card to index.html
Added a new project card for the Blog App with details about its features and technologies used.

--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
         </div>
     </section>
 
-    <div class="project-card">
+                <div class="project-card">
                     <div class="project-header">
                         <div class="project-icon">🥊</div>
                         <div>
@@ -431,8 +431,28 @@
                         <span class="tech-tag">HTML/CSS</span>
                     </div>
                     <a href="https://muaythaiapp-hjiy.onrender.com" target="_blank" style="display: inline-block; margin-top: 15px; padding: 8px 20px; background: rgba(0, 212, 255, 0.1); color: #00d4ff; text-decoration: none; border-radius: 20px; border: 1px solid rgba(0, 212, 255, 0.3); transition: all 0.3s ease;">View Live App →</a>
-    </div>
-
+                </div>
+    
+                <div class="project-card">
+                    <div class="project-header">
+                        <div class="project-icon">📕</div>
+                        <div>
+                            <h3>Blog App</h3>
+                            <span class="project-status" style="background: rgba(0, 212, 255, 0.2); color: #00d4ff;">Live</span>
+                        </div>
+                    </div>
+                    <p class="project-description">
+                        Dynamic blog application built with Django featuring post creation, editing, commenting, and user authentication. Designed for multi-user content publishing with full CRUD functionality.
+                    </p>
+                    <div class="project-tech">
+                        <span class="tech-tag">Django</span>
+                        <span class="tech-tag">Python</span>
+                        <span class="tech-tag">PostgreSQL</span>
+                        <span class="tech-tag">HTML/CSS</span>
+                    </div>
+                    <a href="https://blog-app-0pkp.onrender.com" target="_blank" class="project-btn">View Live App →</a>
+                </div>
+    
                 <div class="project-card">
                     <div class="project-header">
                         <div class="project-icon">📊</div>
