--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
                         <span class="tech-tag">PostgreSQL</span>
                         <span class="tech-tag">HTML/CSS</span>
                     </div>
-                    <a href="https://blog-app-0pkp.onrender.com" target="_blank" class="project-btn">View Live App →</a>
+                    <a href="https://blog-app-0pkp.onrender.com" target="_blank" style="display: inline-block; margin-top: 15px; padding: 8px 20px; background: rgba(0, 212, 255, 0.1); color: #00d4ff; text-decoration: none; border-radius: 20px; border: 1px solid rgba(0, 212, 255, 0.3); transition: all 0.3s ease;">View Live App →</a>
                 </div>
             </div>
         </div>
