--- a/index.html
+++ b/index.html
@@ -415,6 +415,10 @@
         </div>
     </section>
 
+    <section class="fade-in" id="projects">
+        <div class="container">
+            <h2 class="section-title">My Projects</h2>
+            <div class="projects-grid">
                 <div class="project-card">
                     <div class="project-header">
                         <div class="project-icon">🥊</div>
