Add web scraper project card to index.html
Added a new project card for a web scraper with details.

--- a/index.html
+++ b/index.html
@@ -456,6 +456,25 @@
                     </div>
                     <a href="https://blog-app-0pkp.onrender.com" target="_blank" style="display: inline-block; margin-top: 15px; padding: 8px 20px; background: rgba(0, 212, 255, 0.1); color: #00d4ff; text-decoration: none; border-radius: 20px; border: 1px solid rgba(0, 212, 255, 0.3); transition: all 0.3s ease;">View Live App →</a>
                 </div>
+
+                <div class="project-card">
+                    <div class="project-header">
+                        <div class="project-icon">🕷️</div>
+                        <div>
+                            <h3>Web Scraper</h3>
+                            <span class="project-status">In Progress</span>
+                        </div>
+                    </div>
+                    <p class="project-description">
+                        Automated web scraping tool designed to extract and process data from websites. Features customizable scraping rules, data parsing, and export functionality for efficient data collection and analysis.
+                    </p>
+                    <div class="project-tech">
+                        <span class="tech-tag">Python</span>
+                        <span class="tech-tag">BeautifulSoup</span>
+                        <span class="tech-tag">Selenium</span>
+                        <span class="tech-tag">Pandas</span>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
